--- a/frontend/about.css
+++ b/frontend/about.css
@@ -66,7 +66,7 @@ header {
   background: linear-gradient(100deg, #e6f4ea, #86d29a);
   border-bottom-left-radius: 26px;
   border-bottom-right-radius: 26px;
-  box-shadow: #7ce5d3 0px -2px 10px;
+  box-shadow: #004d40 0px -2px 10px;
 }
 
 .nav-bar {
